BusOne/src/objects/Clinical_Trial__c.object
<CustomObject>
    <description>Clinical Trials data sourced by users or a third party</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Link to the Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Clinical Trials</relationshipLabel>
        <relationshipName>Clinical_Trial</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Date of the trial</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the trial</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date_vod__c</fullName>
        <description>The date that the clinical trial ended or is estimated to end</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_vod__c</fullName>
        <description>URL field that links to external Clinical Trials, e.g ClinicalTrials.gov</description>
        <label>ID</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <description>Picklist of trial phases</description>
        <label>Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phase I</fullName>
                </value>
                <value>
                    <fullName>Phase II</fullName>
                </value>
                <value>
                    <fullName>Phase III</fullName>
                </value>
                <value>
                    <fullName>Phase IV</fullName>
                </value>
                <value>
                    <fullName>None Specified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>Picklist of trial roles for the professional</description>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Principal Investigator</fullName>
                </value>
                <value>
                    <fullName>Protocol Chair</fullName>
                </value>
                <value>
                    <fullName>Protocol Co-Chair</fullName>
                </value>
                <value>
                    <fullName>Study Coordinator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sponsor__c</fullName>
        <description>The sponsor of the trial</description>
        <label>Sponsor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date_vod__c</fullName>
        <description>The date that the clinical trial began.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Picklist of trial statuses</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Approved - Not Yet Active</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Temporarily Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Clinical Trial</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Date__c</columns>
        <columns>Phase__c</columns>
        <columns>Role__c</columns>
        <columns>Status__c</columns>
        <columns>Sponsor__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Clinical Trial Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clinical Trials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>